--- a/Hovedopgave1/Hovedopgave1/Views/Home/OpretVirksomhed.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Home/OpretVirksomhed.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model Hovedopgave1.Models.Virksomhed
 @{
     Layout = null;
 }
@@ -12,45 +12,53 @@
     <link rel="stylesheet" href="~/Content/bootstrap.css" />
 </head>
 <body>
-    <div>
-        <input type="text" id="Navn" name="Navn" placeholder="Navn" />
-        <input type="text" id="KontaktPerson" name="KontaktPerson" placeholder="KontaktPerson" />
-    </div>
-    <br />
+    @using (Html.BeginForm("OpretVirksomhed", "Home", FormMethod.Post))
+    {
+        <div>
+            @Html.TextBoxFor(m => m.Navn, new { @id = "Navn", @placeholder = "Navn" })*
 
-    <div>
-        <input type="text" id="Tlf.nr" name="Tlf.nr" placeholder="Tlf.nr" />
-        <input type="text" id="e-mail" name="e-mail" placeholder="e-mail" />
-    </div>
-    <br />
+            @Html.TextBoxFor(m => m.KontaktPerson, new { @id = "KontaktPerson", @placeholder = "KontaktPerson" })*
 
-    <div>
-        <pre>Virksomhedsinfo       Mulige Opgaver</pre>
-    </div>
-    <div>
-        @Html.TextArea("Virksomhedsinfo")
-        @Html.TextArea("MuligeOpgaver")
-    </div>
-    <br />
-    <div>
-        Profiler
-    </div>
-    <div>
-        @Html.TextArea("Profiler")
-    </div>
-    <br />
-    <div>
-        <input type="text" id="OpgaveLøsning" name="OpgaveLøsning" placeholder="Opgave Løsning" />
-    </div>
-    <br />
-    <div>
-        <input type="text" id="StyrkePosistion" name="StyrkePosistion" placeholder="Styrke Posistion" />
-        
-    </div>
-    <br />
-    <div>
-        <input type="button" id="OpretVirksomhed" value="Opret Virksomhed" />
-    </div>
+        </div>
+        <br />
 
+        <div>
+            @Html.TextBoxFor(m => m.Telefon, new { @id = "Telefon", @placeholder = "Telefon" })*
+
+            @Html.TextBoxFor(m => m.Mail, new { @id = "Mail", @placeholder = "Mail" })*
+
+        </div>
+        <br />
+
+        <div>
+            <pre>Virksomhedsinfo       Mulige Opgaver</pre>
+        </div>
+        <div>
+            @Html.TextAreaFor(m => m.VirksomhedsInfo, new { @id = "VirksomhedsInfo", @placeholder = "Skriv VirksomhedsInfo" })*
+
+            @Html.TextAreaFor(m => m.MuligeOpgaver, new { @id = "MuligeOpgaver", @placeholder = "Skriv MuligeOpgaver" })*
+        </div>
+        <br />
+        <div>
+            Profiler
+        </div>
+        <div>
+            @Html.TextAreaFor(m => m.Profiler, new { @id = "Profiler", @placeholder = "Skriv Profiler" })*
+        </div>
+        <br />
+        <div>
+            @Html.TextBoxFor(m => m.OpgaveLøsning, new { @id = "OpgaveLøsning", @placeholder = "OpgaveLøsning" })*
+        </div>
+        <br />
+        <div>
+            @Html.TextBoxFor(m => m.Styrkeposition, new { @id = "Styrkeposition", @placeholder = "Styrkeposition" })*
+
+
+        </div>
+        <br />
+        <div>
+            <input type="submit" id="OpretVirksomhed" value="Opret Virksomhed" />
+        </div>
+    }
 </body>
 </html>
