--- a/Hovedopgave1/Hovedopgave1/Views/Home/BrugerListe.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Home/BrugerListe.cshtml
@@ -26,9 +26,13 @@
            <td>@Html.DisplayFor(models => s.Password)</td>
            <td>@Html.DisplayFor(models => s.Rettighed)</td>
 
-           <td>@Html.ActionLink("Rediger", "RedigerBruger", "Home", null, new { @class = "btn btn-primary" })</td>
+           <td>@Html.ActionLink("Rediger", "RedigerBruger", "Home", new {id = s.Id }, new { @class = "btn btn-primary" })</td>
            <td>
+               @using (Html.BeginForm("BrugerListe", "Home"))
+               {
+                   @Html.Hidden("Id", s.Id)
                <input type="submit" id="Sletbruger" class="btn btn-primary" value="Slet" />
+               }
            </td>
        </tr>
        }
