--- a/Hovedopgave1/Hovedopgave1/Views/Home/RedigerVirksomhed.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Home/RedigerVirksomhed.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model Hovedopgave1.Models.Virksomhed
 @{
     Layout = null;
 }
@@ -12,45 +12,91 @@
     <link rel="stylesheet" href="~/Content/bootstrap.css" />
 </head>
 <body>
-    <div>
-        <input type="text" id="Navn" name="Navn" placeholder="Navn" />
-        <input type="text" id="KontaktPerson" name="KontaktPerson" placeholder="KontaktPerson" />
-    </div>
-    <br />
+    @using (Html.BeginForm())
+    {
+        @Html.AntiForgeryToken()
 
     <div>
-        <input type="text" id="Tlf.nr" name="Tlf.nr" placeholder="Tlf.nr" />
-        <input type="text" id="e-mail" name="e-mail" placeholder="e-mail" />
-    </div>
-    <br />
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @Html.HiddenFor(model => model.Id)
 
-    <div>
-        <pre>Virksomhedsinfo       Mulige Opgaver</pre>
-    </div>
-    <div>
-        @Html.TextArea("Virksomhedsinfo")
-        @Html.TextArea("MuligeOpgaver")
-    </div>
-    <br />
-    <div>
-        Profiler
-    </div>
-    <div>
-        @Html.TextArea("Profiler")
-    </div>
-    <br />
-    <div>
-        <input type="text" id="OpgaveLøsning" name="OpgaveLøsning" placeholder="Opgave Løsning" />
-    </div>
-    <br />
-    <div>
-        <input type="text" id="StyrkePosistion" name="StyrkePosistion" placeholder="Styrke Posistion" />
+        <div class="form-group">
+            @Html.LabelFor(model => model.Navn, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Navn, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Navn, "", new { @class = "text-danger" })
+            </div>
+        </div>
 
-    </div>
-    <br />
-    <div>
-        <input type="button" id="RedigerVirksomhed" value="Rediger Virksomhed" />
-    </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.KontaktPerson, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.KontaktPerson, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.KontaktPerson, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.Telefon, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Telefon, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Telefon, "", new { @class = "text-danger" })
+            </div>
+        </div>
 
+        <div class="form-group">
+            @Html.LabelFor(model => model.Mail, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Mail, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Mail, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.VirksomhedsInfo, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.VirksomhedsInfo, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.VirksomhedsInfo, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.MuligeOpgaver, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.MuligeOpgaver, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.MuligeOpgaver, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Profiler, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Profiler, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Profiler, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.OpgaveLøsning, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.OpgaveLøsning, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.OpgaveLøsning, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Styrkeposition, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Styrkeposition, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Styrkeposition, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <br />
+        <div class="form-group">
+            <div class="col-md-10">
+                <input type="submit" id="Rediger" value="Rediger" class="btn btn-primary" />
+            </div>
+        </div>
+    </div>
+    }
 </body>
 </html>
