Har tilføjet tilbage knap til viewet

--- a/Hovedopgave1/Hovedopgave1/Views/Home/BrugerOprettet.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Home/BrugerOprettet.cshtml
@@ -11,8 +11,12 @@
     <title>BrugerOprettet</title>
 </head>
 <body>
-    <div> 
+    <div>
         <h2> Tillykke, en ny bruger er blevet oprettet</h2>
     </div>
+    <div>
+        <input type="button" value="Tilbage til forside" onclick="location.href='@Url.Action("Forside", "Home")'" />
+    </div>
+
 </body>
 </html>
