Forsiden ser let pænere ud nu, knapperne er i midten og der er mellemrum mellem knapperne

--- a/Hovedopgave1/Hovedopgave1/Views/Home/Forside.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Home/Forside.cshtml
@@ -25,29 +25,30 @@
 <body>
         
         <h2>Velkommen til InnoVest</h2>
-
-    <div> 
-        <input type="button" class="button" value="Opret Student" onclick="location.href='@Url.Action("OpretStudent", "Home")'" />
-        <input type="button" class="button" value="Student Liste" onclick="location.href='@Url.Action("StudentListe", "Home")'" />
-    </div>
-
-    <div>
-        <input type="button" class="button" value="Opret Virksomhed" onclick="location.href='@Url.Action("OpretVirksomhed", "Home")'" />
-        <input type="button" class="button" value="Virksomheds Liste" onclick="location.href='@Url.Action("VirksomhedListe", "Home")'"/>
-    </div>
-
-    <div>
-        <input type="button" class="button" value="Opret Tilføjer" onclick="location.href='@Url.Action("OpretTilføjer", "Home")'" />
-        <input type="button" class="button" value="Tilføjer Liste" onclick="location.href='@Url.Action("TilføjerListe", "Home")'" />
-    </div>
-
-    <div>
-        <input type="button" class="button" value="Opret Bruger" onclick="location.href='@Url.Action("OpretBruger", "Home")'" />
-        <input type="button" class="button" value="Bruger Liste" onclick="location.href='@Url.Action("BrugerListe", "Home")'" />
-    </div>
-
-    <div>
-        <input type="button" class="button" value="Udløbet Studenter" onclick="location.href='@Url.Action("UdløbetStudentListe", "Home")'" />
-    </div>
+        <div align="center">
+            <div>
+                <input type="button" class="button" value="Opret Student" onclick="location.href='@Url.Action("OpretStudent", "Home")'" />
+                <input type="button" class="button" value="Student Liste" onclick="location.href='@Url.Action("StudentListe", "Home")'" />
+            </div>
+            <br />
+            <div>
+                <input type="button" class="button" value="Opret Virksomhed" onclick="location.href='@Url.Action("OpretVirksomhed", "Home")'" />
+                <input type="button" class="button" value="Virksomheds Liste" onclick="location.href='@Url.Action("VirksomhedListe", "Home")'" />
+            </div>
+            <br />
+            <div>
+                <input type="button" class="button" value="Opret Tilføjer" onclick="location.href='@Url.Action("OpretTilføjer", "Home")'" />
+                <input type="button" class="button" value="Tilføjer Liste" onclick="location.href='@Url.Action("TilføjerListe", "Home")'" />
+            </div>
+            <br />
+            <div>
+                <input type="button" class="button" value="Opret Bruger" onclick="location.href='@Url.Action("OpretBruger", "Home")'" />
+                <input type="button" class="button" value="Bruger Liste" onclick="location.href='@Url.Action("BrugerListe", "Home")'" />
+            </div>
+            <br />
+            <div>
+                <input type="button" class="button" value="Udløbet Studenter" onclick="location.href='@Url.Action("UdløbetStudentListe", "Home")'" />
+            </div>
+        </div>
 </body>
 </html>
