--- a/Hovedopgave1/Hovedopgave1/Views/Home/RedigerBruger.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Home/RedigerBruger.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model Hovedopgave1.Models.Bruger
 @{
     Layout = null;
 }
@@ -12,20 +12,46 @@
     <link rel="stylesheet" href="~/Content/bootstrap.css" />
 </head>
 <body>
-    <div>
-        <input type="text" id="Brugernavn" name="Brugernavn" placeholder="Brugernavn" />
-    </div>
+    @using (Html.BeginForm())
+    {
+        @Html.AntiForgeryToken()
 
     <div>
-        <input type="text" id="Password" name="Password" placeholder="Password" />
-    </div>
 
-    <div>
-        <input type="text" id="Brugertype" name="Brugertype" placeholder="Bruger type" />
-    </div>
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @Html.HiddenFor(model => model.Id)
 
-    <div>
-        <input type="submit" id="Redigerbruger" value="Rediger Bruger" />
+        <div class="form-group">
+            @Html.LabelFor(model => model.Brugernavn, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Brugernavn, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Brugernavn, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
+            </div>
+        </div>>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Rettighed, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Rettighed, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Rettighed, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <br />
+        <div class="form-group">
+            <div class="col-md-10">
+                <input type="submit" id="Rediger" value="Rediger" class="btn btn-primary" />
+            </div>
+        </div>
     </div>
+    }
 </body>
 </html>
