--- a/Hovedopgave1/Hovedopgave1/Views/Home/RedigerBruger.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Home/RedigerBruger.cshtml
@@ -35,7 +35,7 @@
                 @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
             </div>
-        </div>>
+        </div>
 
         <div class="form-group">
             @Html.LabelFor(model => model.Rettighed, htmlAttributes: new { @class = "control-label col-md-2" })
