Har lavet en søg på uddannelse metode til Student

--- a/Hovedopgave1/Hovedopgave1/Views/Home/StudentListe.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Home/StudentListe.cshtml
@@ -24,6 +24,7 @@
         @using (Html.BeginForm("StudentListe", "Home"))
         {
         <input type="text" placeholder="Søg på Navn" name="Navn" />
+        <input type="text" placeholder="Søg på Uddannelse" name="Uddannelse" />
         <input type="submit" value="Søg" />
         }
     </div>
