Har lavet søgning til Student med SP,P og HO

--- a/Hovedopgave1/Hovedopgave1/Views/Home/StudentListe.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Home/StudentListe.cshtml
@@ -26,8 +26,11 @@
             <input type="text" placeholder="Søg på Navn" name="Navn" />
             <input type="text" placeholder="Søg på Uddannelse" name="Uddannelse" />
             <input type="text" placeholder="Søg på Semester" name="Semester" />
+            <input type="text" placeholder="Søg på Praktik/Hovedopgave/Semester Projekt" name="Emne" />
             <input type="submit" value="Søg" />
+            <input type="reset" value="Ryd felter" />
         }
+   
     </div>
     <table class="table">
         <tr>
