Kan nu søge på opgavetype i virksomhedsliste

--- a/Hovedopgave1/Hovedopgave1/Views/Home/VirksomhedListe.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Home/VirksomhedListe.cshtml
@@ -24,6 +24,7 @@
         @using (Html.BeginForm("VirksomhedListe", "Home"))
         {
             <input type="text" placeholder="Søg på Navn" name="Navn" />
+            <input type="text" placeholder="Søg på Opgavetype" name="Opgave" />
             <input type="submit" value="Søg" />
         }
         </div>
