Har lavet søgemetode til Virksomhed på profiler

--- a/Hovedopgave1/Hovedopgave1/Views/Home/VirksomhedListe.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Home/VirksomhedListe.cshtml
@@ -25,6 +25,7 @@
         {
             <input type="text" placeholder="Søg på Navn" name="Navn" />
             <input type="text" placeholder="Søg på Opgavetype" name="Opgave" />
+            <input type="text" placeholder="Søg på Profiler" name="Profiler" />
             <input type="submit" value="Søg" />
         }
         </div>
