--- a/Hovedopgave1/Hovedopgave1/Views/Home/RedigerTilføjer.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Home/RedigerTilføjer.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model Hovedopgave1.Models.Tilføjer
 @{
     Layout = null;
 }
@@ -12,49 +12,100 @@
     <link rel="stylesheet" href="~/Content/bootstrap.css" />
 </head>
 <body>
-    <div>
-        <input type="text" id="Navn" name="Navn" placeholder="Navn" />
-        <input type="text" id="Telefonnummer" name="Telefonnummer" placeholder="Telefonnummer" />
-        <input type="text" id="E-mail" name="E-mail" placeholder="E-mail" />
-    </div>
-    <br />
-    <div>
-        <input type="text" id="Uddannelse" name="Uddannelse" placeholder="Uddannelse" />
-        <input type="text" id="SøgerJob" name="SøgerJob" placeholder="Søger job som..." />
-    </div>
-    <br />
-    <div>
-        Erhverseffaring
-    </div>
+    @using (Html.BeginForm())
+    {
+        @Html.AntiForgeryToken()
     <div>
 
-        @Html.TextArea("Erhverseffaring")
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @Html.HiddenFor(model => model.Id)
 
-    </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.Navn, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Navn, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Navn, "", new { @class = "text-danger" })
+            </div>
+        </div>
 
-    <br />
-    <div>
-        Faglige- og Personligekernekompetencer
-    </div>
-    <div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.Adresse, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Adresse, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Adresse, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.Telefon, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Telefon, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Telefon, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.Mail, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Mail, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Mail, "", new { @class = "text-danger" })
+            </div>
+        </div>
 
-        @Html.TextArea("kompetencer")
+        <div class="form-group">
+            @Html.LabelFor(model => model.Uddannelse, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Uddannelse, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Uddannelse, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.Erhvervserfaring, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Erhvervserfaring, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Erhvervserfaring, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.JobØnske, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.JobØnske, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.JobØnske, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.FagligeKompetencer, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.FagligeKompetencer, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.FagligeKompetencer, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.PersonligeKompetencer, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.PersonligeKompetencer, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.PersonligeKompetencer, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.GenereltInfo, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.GenereltInfo, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.GenereltInfo, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.ØnskerAtFlytte, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.ØnskerAtFlytte, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.ØnskerAtFlytte, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <br />
+        <div class="form-group">
+            <div class="col-md-10">
+            <input type="submit" id="Rediger" value="Rediger" />
+                </div>
+        </div>
     </div>
-    <br />
-    <div>
-        Anden information
-    </div>
-    <div>
-
-        @Html.TextArea("extrainfo")
-    </div>
-    <div>
-        Ønsker at flytte til området
-        <input type="checkbox" name="ja" value="Ja"> ja
-        <input type="checkbox" name="nej" value="Nej"> nej<br>
-    </div>
-    <div>
-        <input type="button" id="Rediger" value="Rediger" />
-    </div>
+    }
 </body>
 </html>
