Ændret opret knappen til en sumbit

--- a/Hovedopgave1/Hovedopgave1/Views/Home/OpretTilføjer.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Home/OpretTilføjer.cshtml
@@ -82,7 +82,7 @@
         <br />
 
         <div>
-            <input type="button" id="Opret" value="Opret" />
+            <input type="submit" id="Opret" value="Opret" />
         </div>
     }
 </body>
