--- a/Hovedopgave1/Hovedopgave1/Views/Home/TilføjerListe.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Home/TilføjerListe.cshtml
@@ -52,7 +52,7 @@
             <td>@Html.DisplayFor(models => s.GenereltInfo)</td>
             <td>@Html.DisplayFor(models => s.ØnskerAtFlytte)</td>
 
-            <td>@Html.ActionLink("Rediger", "RedigerTilføjer", "Home", null, new { @class = "btn btn-primary" })</td>
+            <td>@Html.ActionLink("Rediger", "RedigerTilføjer", "Home", new {id = s.Id }, new { @class = "btn btn-primary" })</td>
             <td>@Html.ActionLink("Slet", "TilføjerDelete", "Home", new {id = s.Id }, new {@class="btn btn-primary" })</td>
         </tr>
 
