--- a/Hovedopgave1/Hovedopgave1/Views/Home/OpretStudent.cshtml
+++ b/Hovedopgave1/Hovedopgave1/Views/Home/OpretStudent.cshtml
@@ -11,7 +11,7 @@
     <title>OpretStudent</title>
     <link rel="stylesheet" href="~/Content/bootstrap.css" />
 </head>
-<body>
+<body >
     <div>
         * Skal udfyldes
     </div>
@@ -106,5 +106,11 @@
         <input type="submit" id="OpretStudent" value="Opret" />
     </div>
     }
+
+    <script>
+        function getCurrentdate() {
+            
+        }
+    </script>
 </body>
 </html>
